# ECS275

./: README
FinalProject/include/: optix.h  optix_d3d10_interop.h  optix_d3d11_interop.h  optix_d3d9_interop.h  optix_device.h  optix_host.h  optix_sizet.h
FinalProject/include/internal/: optix_datatypes.h  optix_declarations.h  optix_declarations_internal.h  optix_defines.h  optix_internal.h
FinalProject/include/optixu/: optixpp_namespace.h  optixu.h  optixu_math_namespace.h  optixu_matrix_namespace.h  optixu_traversal.h  optixu_vector_types.h
FinalProject/lib/: liboptixu.dylib  liboptixu.so.1  liboptixu.so.2.1.1
FinalProject/lib64/: liboptix.so.1  liboptixu.so.2.1.1
FinalProject/src/: CMakeLists.txt
FinalProject/src/CMake/: FindCUDA.cmake  FindSUtilGLUT.cmake  Macros.cmake
FinalProject/src/PhotonMapping/: CMakeLists.txt  device_functions.cu  device_functions.h  gather.cu  gathering.cu  inlines.h  kdtree.h  main.cpp  new_knn.h  output.cu  parallelogram.cu  photon_mapping_scene.cpp  photon_mapping_scene.h  photon_tracing.cu  random.h  ray_tracing.cu  select.h  sphere.cu  structs.h
FinalProject/src/cuda/: helpers.h  intersection_refinement.h
FinalProject/src/sutil/: CMakeLists.txt  DeviceMemoryLogger.cpp  DeviceMemoryLogger.h  GLUTDisplay.cpp  GLUTDisplay.h  HDRLoader.cpp  ImageDisplay.cpp  ModelLoader.cpp  ModelLoader.h  ObjLoader.cpp  ObjLoader.h  PPMLoader.cpp  PPMLoader.h  SampleScene.h  SunSky.h  glm.cpp  sutil.c  sutil.h
reference/: CMakeLists.txt  LambertianMaterial.cc  LambertianMaterial.h  Parser.cc  Parser.h  PhongMaterial.cc  PhongMaterial.h
scenes/: cornellbox.scn  cornellbox_2balls.scn  cornellbox_3balls.scn  cornellbox_L100.scn  debug.scn  drt_nnn_s16.scn  drt_nny_s16_sh1.scn  drt_nny_s16_sh2.scn  drt_nyn_s16_f27_a6.scn  drt_nyn_s16_f27_a9.scn  drt_nyn_s16_f34_a6.scn  drt_nyn_s16_f34_a9.scn  drt_ynn_s16.scn  drt_yyy_s16_f27_a6_sh1.scn  drt_yyy_s16_f27_a6_sh2.scn  drt_yyy_s16_f27_a9_sh1.scn  drt_yyy_s16_f27_a9_sh2.scn  drt_yyy_s16_f34_a6_sh1.scn  drt_yyy_s16_f34_a6_sh2.scn  drt_yyy_s16_f34_a9_sh1.scn  drt_yyy_s16_f34_a9_sh2.scn  mytest.scn  phongtest.scn  run  shortblock.off  star.off  tallblock.off
src/: BasicMaterial.cc  BasicMaterial.h  CMakeLists.txt  Camera.h  Color.h  Group.cc  Group.h  LambertianMaterial.h  LiRender.cc  Object.h  Parser.cc  Parser.h  PhongMaterial.cc  PhongMaterial.h  PinholeCamera.cc  PinholeCamera.h  Plane.h  Point.h  Polygon.cc  Polygon.h  Primitive.cc  Primitive.h  RenderContext.h  Scene.cc  Scene.h  Sphere.cc  Sphere.h  ThinLensCamera.cc  ThinLensCamera.h  Time.cc
